--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>acme</groupId>
     <artifactId>mvndemo</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.1</version>
     <name>MavenDemo</name>
     <description>A maven demo project to mess around with</description>
     <packaging>jar</packaging>
